--- a/css/main.css
+++ b/css/main.css
@@ -196,6 +196,7 @@ body {
   top: 50%;
   left: 50%;
   padding: 40px;
+  width: 90%;
   background: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -207,9 +208,16 @@ body {
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (max-width: 479px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .modal {
-    max-width: 450px;
+    width: 450px;
+    height: 609px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
   }
 }
 .backdrop.is-hidden .modal {
@@ -251,10 +259,15 @@ body {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: var(--typical-letter-spacing);
   color: var(--title-color);
+}
+@media screen and (min-width: 1200px) {
+  .modal-title {
+    line-height: 1.15;
+  }
 }
 
 .input-field {
@@ -286,39 +299,62 @@ body {
 }
 
 .form-input::-webkit-input-placeholder {
-  font-size: 12px;
-  line-height: 1.17;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 
 .form-input::-moz-placeholder {
-  font-size: 12px;
-  line-height: 1.17;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 
 .form-input:-ms-input-placeholder {
-  font-size: 12px;
-  line-height: 1.17;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 
 .form-input::-ms-input-placeholder {
-  font-size: 12px;
-  line-height: 1.17;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 
 .form-input::placeholder,
 .comment-text {
-  font-size: 12px;
-  line-height: 1.17;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
+}
+@media screen and (min-width: 1200px) {
+  .form-input::-webkit-input-placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+  .form-input::-moz-placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+  .form-input:-ms-input-placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+  .form-input::-ms-input-placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+  .form-input::placeholder,
+.comment-text {
+    font-size: 12px;
+    line-height: 1.17;
+  }
 }
 
 .comment-text {
@@ -362,7 +398,8 @@ body {
   margin-bottom: 29px;
 }
 
-.check-text {
+.check-text,
+.check-link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -370,6 +407,26 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin-right: 5px;
+  font-size: 11px;
+  line-height: 1.17;
+  letter-spacing: var(--typical-letter-spacing);
+  color: var(--primary-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .check-text,
+.check-link {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
+
+.check-link {
+  text-decoration: none;
+  margin-right: 0;
+  color: var(--accent-color);
+}
+.check-link:hover, .check-link:focus {
+  color: #188ce8;
 }
 
 .check-text span {
@@ -383,10 +440,6 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin-right: 5px;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: var(--typical-letter-spacing);
-  color: var(--primary-text-color);
   width: 16px;
   height: 15px;
   border: 2px solid var(--title-color);
@@ -410,13 +463,6 @@ body {
 
 .input-check:checked + .check-text .icon-check {
   fill: #ffffff;
-}
-
-.check-link {
-  color: var(--accent-color);
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: var(--typical-letter-spacing);
 }
 
 .submit-btn {
