--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -27,6 +27,7 @@
   left: 50%;
   padding: 40px;
 
+  width: 90%;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -34,20 +35,15 @@
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  @media screen and (max-width: 479px) {
-    max-width: 450px;
-    // width: 100%;
-    // margin: 0 15px;
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
+    width: 450px;
+    height: 609px;
   }
-  // @include tablet {
-  //   position: absolute;
-  //   width: calc (100% - 318px);
-  //   min-height: 581px;
-  //   top: 50%;
-  //   left: 50%;
-  // }
-  // width: 528px;
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
+
   .backdrop.is-hidden & {
     transform: translate(-50%, -50%) scale(1.1);
   }
@@ -79,10 +75,13 @@
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: var(--typical-letter-spacing);
   color: var(--title-color);
+  @include desktop {
+    line-height: 1.15;
+  }
 }
 .input-field {
   position: relative;
@@ -110,10 +109,14 @@
 }
 .form-input::placeholder,
 .comment-text {
-  font-size: 12px;
-  line-height: 1.17;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
+  @media screen and (min-width: 1200px) {
+    font-size: 12px;
+    line-height: 1.17;
+  }
 }
 .comment-text {
   padding: 12px 16px;
@@ -145,26 +148,43 @@
   align-items: center;
   margin-bottom: 29px;
 }
-.check-text {
+.check-text,
+.check-link {
   display: flex;
   align-items: center;
   margin-right: 5px;
+  font-size: 11px;
+  line-height: 1.17;
+  letter-spacing: var(--typical-letter-spacing);
+  color: var(--primary-text-color);
+
+  @include desktop {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
+.check-link {
+  text-decoration: none;
+  margin-right: 0;
+  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: #188ce8;
+  }
+}
+
 .check-text span {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-right: 5px;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: var(--typical-letter-spacing);
-  color: var(--primary-text-color);
   width: 16px;
   height: 15px;
   border: 2px solid var(--title-color);
   border-radius: 3px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   .input-check:checked + & {
     background-color: var(--accent-color);
     border-color: var(--accent-color);
@@ -180,12 +200,12 @@
 .input-check:checked + .check-text .icon-check {
   fill: #ffffff;
 }
-.check-link {
-  color: var(--accent-color);
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: var(--typical-letter-spacing);
-}
+// .check-link {
+//   color: var(--accent-color);
+//   font-size: 14px;
+//   line-height: 1.71;
+//   letter-spacing: var(--typical-letter-spacing);
+// }
 .submit-btn {
   margin: 0 auto;
   padding: 10px 52px;
