--- a/css/main.css
+++ b/css/main.css
@@ -667,17 +667,21 @@ body {
 
 @media screen and (max-width: 767px) {
   .mob-menu {
-    display: none;
     position: fixed;
-    background-color: #fff;
-    z-index: 1;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
   }
   .mob-menu.is-open {
-    display: block;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
   }
 }
 @media screen and (max-width: 767px) {
@@ -700,7 +704,7 @@ body {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .mob-menu {
     display: none;
   }
