--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -120,17 +120,23 @@
 
 @media screen and (max-width: 767px) {
   .mob-menu {
-    display: none;
     position: fixed;
-    background-color: #fff;
-    z-index: 1;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    // display: none;
   }
   .mob-menu.is-open {
-    display: block;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    // display: block;
   }
 }
 .mob-menu .container {
@@ -146,7 +152,7 @@
   }
 }
 .mob-menu {
-  @include mobile {
+  @include tablet {
     display: none;
   }
 }
