--- a/css/main.css
+++ b/css/main.css
@@ -178,11 +178,6 @@ body {
   -webkit-transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (max-width: 479px) {
-  .backdrop {
-    padding: 93px 15px;
-  }
-}
 
 .backdrop.is-hidden {
   opacity: 0;
@@ -697,10 +692,9 @@ body {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    padding-top: 10px;
+    padding-top: 40px;
     padding-bottom: 48px;
     padding-left: 40px;
-    padding-right: 15px;
   }
 }
 
@@ -710,12 +704,7 @@ body {
   }
 }
 
-.mob-menu__top {
-  margin-bottom: 306px;
-}
-
-.header__menu-btn,
-.mob-menu__close-btn {
+.header__menu-btn {
   display: block;
   margin-left: auto;
   padding: 0;
@@ -723,9 +712,6 @@ body {
   height: 40px;
   background-color: transparent;
   border: none;
-}
-
-.header__menu-btn {
   fill: #000000;
 }
 @media screen and (min-width: 768px) {
@@ -740,6 +726,14 @@ body {
 }
 
 .mob-menu__close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
   fill: var(--title-color);
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -777,6 +771,7 @@ body {
 }
 
 .mob-connect__list {
+  margin-top: auto;
   margin-bottom: 64px;
 }
 
