--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,9 +11,9 @@
   transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (max-width: 479px) {
-    padding: 93px 15px;
-  }
+  // @media screen and (max-width: 479px) {
+  //   padding: 93px 15px;
+  // }
 }
 .backdrop.is-hidden {
   opacity: 0;
