--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -145,10 +145,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-top: 10px;
+    padding-top: 40px;
     padding-bottom: 48px;
     padding-left: 40px;
-    padding-right: 15px;
   }
 }
 .mob-menu {
@@ -156,11 +155,8 @@
     display: none;
   }
 }
-.mob-menu__top {
-  margin-bottom: 306px;
-}
-.header__menu-btn,
-.mob-menu__close-btn {
+
+.header__menu-btn {
   display: block;
   margin-left: auto;
   padding: 0;
@@ -168,8 +164,6 @@
   height: 40px;
   background-color: transparent;
   border: none;
-}
-.header__menu-btn {
   fill: #000000;
 
   @include tablet {
@@ -179,7 +173,16 @@
     display: none;
   }
 }
+// .header__menu-btn {}
 .mob-menu__close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
   fill: var(--title-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -188,9 +191,7 @@
     fill: #188ce8;
   }
 }
-// .mob-menu__close-btn .mob-menu__icon {
-//   display: none;
-// }
+
 .mob-menu__close-btn.is-open .mob-menu__icon {
   display: block;
 }
@@ -215,6 +216,7 @@
   color: var(--title-color);
 }
 .mob-connect__list {
+  margin-top: auto;
   margin-bottom: 64px;
 }
 .mob-connect__item:not(:last-child) {
