--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -142,7 +142,7 @@
   }
 }
 .field-check {
-  position: relative;
+  // position: relative;
   display: flex;
   align-items: center;
   margin-bottom: 29px;
@@ -163,22 +163,11 @@
   }
 }
 .check-link {
-  text-decoration: none;
   margin-right: 0;
   color: var(--accent-color);
   &:hover,
   &:focus {
     color: #188ce8;
-  }
-  &::after {
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 1px;
-    bottom: 0;
-    left: 0;
-    background-color: var(--accent-color);
-    border: none;
   }
 }
 
@@ -209,12 +198,6 @@
 .input-check:checked + .check-text .icon-check {
   fill: #ffffff;
 }
-// .check-link {
-//   color: var(--accent-color);
-//   font-size: 14px;
-//   line-height: 1.71;
-//   letter-spacing: var(--typical-letter-spacing);
-// }
 .submit-btn {
   margin: 0 auto;
   padding: 10px 52px;
